fixed sold items not showing up correctly

--- a/admin/caramel.css
+++ b/admin/caramel.css
@@ -41,7 +41,7 @@ body {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.4;
-  background-color: #FFF;
+
   color: #5F5F5F;
   margin: 0; }
 
